@@ -308,7 +308,7 @@ public class LFUCache<K, V> implements SolrCache<K, V> {
 
   @Override
   public String toString() {
-    return name + cacheMap != null ? cacheMap.getValue().toString() : "";
+    return name + (cacheMap != null ? cacheMap.getValue().toString() : "");
   }
 
 }
