@@ -324,6 +324,8 @@ Bug Fixes
 * SOLR-10630: HttpSolrCall.getAuthCtx().new AuthorizationContext() {...}.getParams()
   sometimes throws java.lang.NullPointerException (hu xiaodong via shalin)
 
+* SOLR-10639: Fix NPE on LRU/FastLRU/LFU toString method (Tomás Fernández Löbbe)
+
 Other Changes
 ----------------------
 
